--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <header class="page-header">
       <nav class="page-nav">
         <a class="page-logo" href="./index.html"
-          ><span class="logo-color">Web</span>Studio</a
+          ><span class="logo-color">Web</span
+          ><span class="logo-color-header">Studio</span></a
         >
-        <u class="menu">
+        <ul class="menu">
           <li class="menu-item">
             <a class="menu-link" href="">Studio</a>
           </li>
@@ -35,7 +36,7 @@
           <li class="menu-item">
             <a class="menu-link" href="">Contacts</a>
           </li>
-        </u>
+        </ul>
       </nav>
       <address>
         <ul>
@@ -143,7 +144,7 @@
         </ul>
       </section>
 
-      <!--Portfolio-->
+      <!--Section 4-->
       <section class="portfolio">
         <h2 class="portfolio-section">Our Portfolio</h2>
         <ul class="portfolio-list">
@@ -213,8 +214,9 @@
 
     <!--Footer-->
     <footer class="page-footer">
-      <a class="page-logo" href="./index.html"
-        ><span class="logo-color">Web</span>Studio</a
+      <a class="page-logo-footer" href="./index.html"
+        ><span class="logo-color">Web</span
+        ><span class="logo-color-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
