--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <header class="page-header">
       <nav class="page-nav">
         <a class="page-logo" href="./index.html"
-          ><span class="logo-color">Web</span
-          ><span class="logo-color-header">Studio</span></a
+          >Web<span class="logo-color">Studio</span></a
         >
         <ul class="menu">
           <li class="menu-item">
@@ -215,8 +214,7 @@
     <!--Footer-->
     <footer class="page-footer">
       <a class="page-logo-footer" href="./index.html"
-        ><span class="logo-color">Web</span
-        ><span class="logo-color-studio">Studio</span></a
+        >Web<span class="logo-color-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
