--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--Header-->
     <header class="page-header">
       <nav class="page-nav">
-        <a class="page-logo" href="./index.html"
+        <a href="./index.html" class="page-logo"
           >Web<span class="logo-color">Studio</span></a
         >
         <ul class="menu">
