--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--Header-->
     <header class="page-header">
       <nav class="page-nav">
-        <a href="./index.html" class="page-logo"
+        <a class="page-logo" href="./index.html"
           >Web<span class="logo-color">Studio</span></a
         >
         <ul class="menu">
@@ -213,7 +213,7 @@
 
     <!--Footer-->
     <footer class="page-footer">
-      <a class="page-logo-footer" href="./index.html"
+      <a class="page-logo-footer"
         >Web<span class="logo-color-studio">Studio</span></a
       >
       <p class="footer-text">
