--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="menu">
           <li class="menu-item">
-            <a class="menu-link" href="">Studio</a>
+            <a class="menu-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="">Portfolio</a>
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="page-address">
         <ul>
           <li>
             <a class="contacts-list-link" href="mailto:info@devstudio.com"
